tests/compile_fail/invalid_corner_radius_literal.rs
use surgeist_style::{CornerRadius, Length};

fn main() {
    let _radius = CornerRadius {
        horizontal: Length::Px(1.0),
        vertical: Length::Px(1.0),
    };
}
